- Don't blit area larger than necessary in wxBufferedDC::UnMask (Liang Jian)
- Fixed wxPixelData<wxImage> compilation (Leonardo Fernandes).
- Added wxImage::GetType() (troelsk).
- Added wxGenericStaticBitmap suitable for display of large bitmaps.
- Support wxListCtrl::GetViewRect() in report view too.
- Implement wxListCtrl::GetSubItemRect() in generic version (David Barnard).
- Added wxVListBox::GetItemRect() (Javier Urien).
- Show busy cursor in wxLaunchDefaultBrowser and add wxBROWSER_NOBUSYCURSOR.
- Added wxFlexGridSizer::Is{Row,Col}Growable() (Marcin Wojdyr).
- Added "enabled" and "hidden" attributes to radio box items in XRC.
- wxWindow::IsBeingDeleted() now returns true not only if the window itself is
  marked for destruction but also if any of its parent windows are.
- Improved drawing of the hint during column move in wxGrid (Santo Pfingsten).
- Add wxGridSelectRowsOrColumns selection mode to wxGrid.
- Add wxEVT_GRID_CELL_CHANGING event matching wxEVT_GRID_CELL_CHANGED.
- Get/HasModifiers() of wxKeyEvent are now also available in wxMouseEvent.
- Provide new/old cell value in wxEVT_GRID_CELL_CHANGING/CHANGED events.
- Added wxArtProvider::GetNativeSizeHint(); GetSizeHint() as well as
  GetNativeSizeHint() now return more sensible values in wxMSW and wxMac and
  no longer return bogus values.
- Added wxControl::SetLabelText() and EscapeMnemonics().
- Added support for wxFILTER_EMPTY and wxFILTER_DIGITS styles to wxTextValidator;
  added also the SetCharIncludes() and SetCharExcludes() utilities.
- Added wxIMAGE_OPTION_PNG_FILTER and many wxIMAGE_OPTION_PNG_COMPRESSION_* options
  to wxImage and wxPNGHandler to allow for custom compression levels when saving PNGs
  (Perdana Panduwana)
- Added GetValue(), GetRange(), GetMessage() functions to wxProgressDialog
- Moved yield functions to wxEventLoopBase and implemented for wxMSW and wxGTK
  a selective wxEventLoopBase::YieldFor() function.